--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@neondatabase/serverless": "^1.0.2",
     "@tailwindcss/typography": "^0.5.19",
+    "dotenv": "^17.2.4",
+    "drizzle-orm": "^0.45.1",
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -19,6 +22,7 @@
     "@types/node": "25.2.0",
     "@types/react": "19.2.10",
     "autoprefixer": "^10.4.24",
+    "drizzle-kit": "^0.31.9",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "typescript": "5.9.3"
